Fix Blazy collapsing audio player to zero height
Blazy injects height:auto;min-height:1px on .b-lazy audio elements.
The existing rule used block-size:revert but that does not override the
physical height property. Adding height:revert ensures the audio
player renders at its natural browser height.

--- a/themes/mukurtu_v4/components/02-molecules/media/_media.scss
+++ b/themes/mukurtu_v4/components/02-molecules/media/_media.scss
@@ -7,6 +7,7 @@
 
     .b-lazy {
       block-size: revert;
+      height: revert;
       min-block-size: max-content;
       inline-size: 100%;
     }
